Aprimorado o sistema de transição de páginas - Alterado 'root' para main

--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -6,42 +6,44 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Lista de Exercicios JavaScript</title>
 	</head>
-	<body id="content">
-		Segue a lista de Exercícios de JavaScript
-		<ul>
-			<li>
-				<a href="javascript-aula1/index.html" class="link"
-					>Aula 01 - Tipos de Dados, Expressões e Variáveis</a
-				>
-			</li>
-			<li>
-				<a href="javascript-aula2/index.html" class="link"
-					>Aula 02 - Fundamentos de objetos e DOM</a
-				>
-			</li>
-			<li>
-				<a href="javascript-aula3/index.html" class="link"
-					>Aula 03 - Comando if-else e biblioteca Math</a
-				>
-			</li>
-			<li>
-				<a href="javascript-aula4/index.html" class="link"
-					>Aula 04 - Comando switch, mapeamento e Date</a
-				>
-			</li>
-			<li>
-				<a href="javascript-aula5/index.html" class="link"
-					>Aula 05 - Manipulação avançada de eventos</a
-				>
-			</li>
-			<li>
-				<a href="javascript-aula6/index.html" class="link"
-					>Aula 06 - DOM avançado, closure e dataset</a
-				>
-			</li>
-		</ul>
+	<body>
+		<main id="content">
+			Segue a lista de Exercícios de JavaScript
+			<ul>
+				<li>
+					<a href="javascript-aula1/index.html" class="link"
+						>Aula 01 - Tipos de Dados, Expressões e Variáveis</a
+					>
+				</li>
+				<li>
+					<a href="javascript-aula2/index.html" class="link"
+						>Aula 02 - Fundamentos de objetos e DOM</a
+					>
+				</li>
+				<li>
+					<a href="javascript-aula3/index.html" class="link"
+						>Aula 03 - Comando if-else e biblioteca Math</a
+					>
+				</li>
+				<li>
+					<a href="javascript-aula4/index.html" class="link"
+						>Aula 04 - Comando switch, mapeamento e Date</a
+					>
+				</li>
+				<li>
+					<a href="javascript-aula5/index.html" class="link"
+						>Aula 05 - Manipulação avançada de eventos</a
+					>
+				</li>
+				<li>
+					<a href="javascript-aula6/index.html" class="link"
+						>Aula 06 - DOM avançado, closure e dataset</a
+					>
+				</li>
+			</ul>
 
-		Voltar para a <a href="/index.html" class="link">Home</a><br />
-		<script src="/main.js"></script>
+			Voltar para a <a href="/index.html" class="link">Home</a><br />
+		</main>
 	</body>
+	<script src="/main.js"></script>
 </html>
