--- a/exercicios-javascript/javascript-aula1/index.html
+++ b/exercicios-javascript/javascript-aula1/index.html
@@ -6,20 +6,22 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercicios Aula 1 JavaScript</title>
 	</head>
-	<body id="content">
-		Aula 01 - Tipos de Dados, Expressões e Variáveis
-		<br />
-		Segue abaixo a lista de Exercicios práticos da Aula 1 de JavaScript:
-		<nav>
-			<ul>
-				<li><a href="./exercicio-i18n.html" class="link">Exercício 1</a></li>
-				<li><a href="./exercicio-nome.html" class="link">Exercício 2</a></li>
-			</ul>
-		</nav>
-		<nav id="linkNav">
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
-			Ir para minha <a href="/index.html" class="link">Home</a>
-		</nav>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			Aula 01 - Tipos de Dados, Expressões e Variáveis
+			<br />
+			Segue abaixo a lista de Exercicios práticos da Aula 1 de JavaScript:
+			<nav>
+				<ul>
+					<li><a href="./exercicio-i18n.html" class="link">Exercício 1</a></li>
+					<li><a href="./exercicio-nome.html" class="link">Exercício 2</a></li>
+				</ul>
+			</nav>
+			<nav id="linkNav">
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
+				Ir para minha <a href="/index.html" class="link">Home</a>
+			</nav>
+		</main>
 	</body>
+	<script src="/main.js"></script>
 </html>
