--- a/exercicios-javascript/javascript-aula2/exercicio-2.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-2.html
@@ -7,18 +7,20 @@
 		<link rel="stylesheet" href="./css/exercicio-2.css" />
 		<title>Exercício 2</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			O objetivo desse Exercício é mostrar o comportamento dinâmico de cliques em um
-			elemento com JavaScript
-		</div>
-		<p id="paragrafo">Clique em Mim</p>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o
-			<a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-2.js"></script>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				O objetivo desse Exercício é mostrar o comportamento dinâmico de cliques em um
+				elemento com JavaScript
+			</div>
+			<p id="paragrafo">Clique em Mim</p>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o
+				<a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-2.js"></script>
+	<script src="/main.js"></script>
 </html>
