--- a/exercicios-javascript/javascript-aula2/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-3.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/exercicios-javascript/main.css">
-    <title>Exercício 3</title>
-  </head>
-  <body id="content">
-    <div id="explicacao">
-    <p>
-      O objetivo deste exercício é observar como funciona a ordem de execução do
-      código pelo console
-    </p>
-    <p>A estrutura co código se encontra da seguinte forma:
-        <ul>
-            <li>console.log(1)</li>
-            <li>console.log(2)</li>
-            <ul>
-                <li>chamada da função do botão que chama esses dois logs</li>
-                <li>console.log(3)</li>
-                <li>console.log(4)</li>
-            </ul>
-            <li>console.log(5)</li>
-        </ul>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<title>Exercício 3</title>
+	</head>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				<p>
+					O objetivo deste exercício é observar como funciona a ordem de execução do
+					código pelo console
+				</p>
+				<p>A estrutura co código se encontra da seguinte forma: </p>
+				<ul>
+					<li>console.log(1)</li>
+					<li>console.log(2)</li>
+					<ul>
+						<li>chamada da função do botão que chama esses dois logs</li>
+						<li>console.log(3)</li>
+						<li>console.log(4)</li>
+					</ul>
+					<li>console.log(5)</li>
+				</ul>
 
-        <p>Resultado esperado:</p>
-        <ul>
-            <li>console.log(1)</li>
-            <li>console.log(2)</li>
-            <li>console.log(5)</li>
-            <li>Logs que virão depois de clicar no botão</li>
-            <li>console.log(3)</li>
-            <li>console.log(4)</li>
-        </ul>
-    </p>
-  </div>
-    <button>Botão</button>
-    <nav id="linkNav">
-      Voltar para a <a href="./index.html" class="link">Lista</a><br />
-      Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-    </nav>
-    <script src="./js/exercicio-3.js"></script>
-    <script src="/main.js"></script>
-  </body>
+				<p>Resultado esperado:</p>
+				<ul>
+					<li>console.log(1)</li>
+					<li>console.log(2)</li>
+					<li>console.log(5)</li>
+					<li>Logs que virão depois de clicar no botão</li>
+					<li>console.log(3)</li>
+					<li>console.log(4)</li>
+				</ul>
+			</div>
+			<button>Botão</button>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
+	</body>
+	<script src="./js/exercicio-3.js"></script>
+	<script src="/main.js"></script>
 </html>
