--- a/exercicios-javascript/javascript-aula3/exercicio-8.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-8.html
@@ -7,26 +7,28 @@
 		<link rel="stylesheet" href="./css/exercicio-8.css" />
 		<title>Exercício 8</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			O objetivo do exerício é criar um alarme<br />
-			que é desativado por uma senha.<br />
-			Senha do Alarme: 114241
-		</div>
-		<div id="exercicio">
-			<div id="btnContainer">
-				<div id="senha1" class="btnAlarme">1</div>
-				<div id="senha2" class="btnAlarme">2</div>
-				<div id="senha3" class="btnAlarme">3</div>
-				<div id="senha4" class="btnAlarme">4</div>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				O objetivo do exerício é criar um alarme<br />
+				que é desativado por uma senha.<br />
+				Senha do Alarme: 114241
 			</div>
-			<div id="desativaAlarme">Desativar o Alarme</div>
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-8.js"></script>
-		<script src="/main.js"></script>
+			<div id="exercicio">
+				<div id="btnContainer">
+					<div id="senha1" class="btnAlarme">1</div>
+					<div id="senha2" class="btnAlarme">2</div>
+					<div id="senha3" class="btnAlarme">3</div>
+					<div id="senha4" class="btnAlarme">4</div>
+				</div>
+				<div id="desativaAlarme">Desativar o Alarme</div>
+			</div>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-8.js"></script>
+	<script src="/main.js"></script>
 </html>
