--- a/exercicios-javascript/javascript-aula4/exercicio-9-obj.html
+++ b/exercicios-javascript/javascript-aula4/exercicio-9-obj.html
@@ -6,28 +6,30 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercício 9 Object</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			<p>
-				O objetivo desse exercício é fragmentar a data fornecida no input em seus
-				respectivos elementos
-			</p>
-		</div>
-		<div id="exercicio">
-			Versão usando Object
-			<h3>Exibir Informações da Data</h3>
-			<div id="formulario">
-				Selecione uma data:
-				<input type="date" id="data" />
-				<button type="button" id="btnExibeInfo">Exibir Informações</button>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				<p>
+					O objetivo desse exercício é fragmentar a data fornecida no input em seus
+					respectivos elementos
+				</p>
 			</div>
-			<div id="informacoes"></div>
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-9 objetos.js"></script>
-		<script src="/main.js"></script>
+			<div id="exercicio">
+				Versão usando Object
+				<h3>Exibir Informações da Data</h3>
+				<div id="formulario">
+					Selecione uma data:
+					<input type="date" id="data" />
+					<button type="button" id="btnExibeInfo">Exibir Informações</button>
+				</div>
+				<div id="informacoes"></div>
+			</div>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-9 objetos.js"></script>
+	<script src="/main.js"></script>
 </html>
