--- a/exercicios-javascript/javascript-aula5/exercicio-5.html
+++ b/exercicios-javascript/javascript-aula5/exercicio-5.html
@@ -7,26 +7,28 @@
 		<link rel="stylesheet" href="./css/exercicio-5.css" />
 		<title>Exercício 5</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			Fa&ccedil;a uma p&aacute;gina web com dois &lt;input type=&quot;text&quot;&gt;.
-			Vamos fazer com que eles sejam &ldquo;g&ecirc;meos&rdquo;, ou seja, tudo que
-			acontece em um reflete automaticamente no outro: &bull; Ao passar o mouse (hover)
-			em qualquer um dos dois inputs, ambos devem ficar com fundo azul claro (ao tirar o
-			mouse de cima eles perdem o fundo azul). &bull; Ao focalizar (clicar) em um input,
-			os dois devem ficar com borda azul escura. Ao desfocar, os dois perdem a borda
-			azul. &bull; Ao digitar num input, o mesmo texto que est&aacute; sendo digitado
-			deve aparecer no outro input.
-		</div>
-		<div id="exercicio">
-			<input id="input1" class="inputTexto" type="text" />
-			<input id="input2" class="inputTexto" type="text" />
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-5.js"></script>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				Fa&ccedil;a uma p&aacute;gina web com dois &lt;input type=&quot;text&quot;&gt;.
+				Vamos fazer com que eles sejam &ldquo;g&ecirc;meos&rdquo;, ou seja, tudo que
+				acontece em um reflete automaticamente no outro: &bull; Ao passar o mouse
+				(hover) em qualquer um dos dois inputs, ambos devem ficar com fundo azul claro
+				(ao tirar o mouse de cima eles perdem o fundo azul). &bull; Ao focalizar
+				(clicar) em um input, os dois devem ficar com borda azul escura. Ao desfocar,
+				os dois perdem a borda azul. &bull; Ao digitar num input, o mesmo texto que
+				est&aacute; sendo digitado deve aparecer no outro input.
+			</div>
+			<div id="exercicio">
+				<input id="input1" class="inputTexto" type="text" />
+				<input id="input2" class="inputTexto" type="text" />
+			</div>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-5.js"></script>
+	<script src="/main.js"></script>
 </html>
