--- a/index.html
+++ b/index.html
@@ -6,28 +6,30 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Minha Página de Projetos</title>
 	</head>
-	<body id="content">
-		Olá seja bem vindo a minha página do github!<br />
+	<body>
+		<main id="content">
+			Olá seja bem vindo a minha página do github!<br />
 
-		Aqui é onde eu coloco meus projetos de estudos!<br />
+			Aqui é onde eu coloco meus projetos de estudos!<br />
 
-		Entre e fique à vontade!<br />
-		Segue a lista de alguns deles:
+			Entre e fique à vontade!<br />
+			Segue a lista de alguns deles:
 
-		<ul>
-			<li>
-				<a href="projetolandingpage/index.html" class="link"
-					>Meu primeiro Projeto de Landing Page</a
-				>
-			</li>
-			<li>
-				<a href="/exercicios-javascript/" class="link"
-					>Exercicios das Aulas de JavaScript</a
-				>
-			</li>
-		</ul>
+			<ul>
+				<li>
+					<a href="projetolandingpage/index.html" class="link"
+						>Meu primeiro Projeto de Landing Page</a
+					>
+				</li>
+				<li>
+					<a href="/exercicios-javascript/" class="link"
+						>Exercicios das Aulas de JavaScript</a
+					>
+				</li>
+			</ul>
 
-		Conforme sigo estudando, continuarei atualizando essa página!
+			Conforme sigo estudando, continuarei atualizando essa página!
+		</main>
 		<script src="/main.js"></script>
 	</body>
 </html>
