--- a/exercicios-javascript/javascript-aula1/exercicio-i18n.html
+++ b/exercicios-javascript/javascript-aula1/exercicio-i18n.html
@@ -6,27 +6,29 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercicio 1</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			<h3>Você já viu a abreviatura “i18n” ?</h3>
-			A proposta do exercício tem por objetivo replicar um algoritmo que converte uma
-			palavra em um texto onde:
-			<ul>
-				<li>A primeira letra da palavra é mantida.</li>
-				<li>
-					No meio da palavra informa um número que contém a quantidade de caracteres
-					depois da primeira letra e antes da ultima.
-				</li>
-				<li>E a ultima letra da palavra pedida.</li>
-			</ul>
-		</div>
-		<button onclick="iniciar()">Iniciar!</button><br />
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a> <br />
-			Voltar para o
-			<a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-1.js"></script>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				<h3>Você já viu a abreviatura “i18n” ?</h3>
+				A proposta do exercício tem por objetivo replicar um algoritmo que converte uma
+				palavra em um texto onde:
+				<ul>
+					<li>A primeira letra da palavra é mantida.</li>
+					<li>
+						No meio da palavra informa um número que contém a quantidade de
+						caracteres depois da primeira letra e antes da ultima.
+					</li>
+					<li>E a ultima letra da palavra pedida.</li>
+				</ul>
+			</div>
+			<button onclick="iniciar()">Iniciar!</button><br />
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a> <br />
+				Voltar para o
+				<a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-1.js"></script>
+	<script src="/main.js"></script>
 </html>
