--- a/exercicios-javascript/javascript-aula1/exercicio-nome.html
+++ b/exercicios-javascript/javascript-aula1/exercicio-nome.html
@@ -6,21 +6,23 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercicio 2</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			<h3>Diga seu nome!</h3>
-			<p>
-				A proposta do exercício é receber os dados capturados pelos prompts e exibi-los
-				na sequência!
-			</p>
-		</div>
-		<button onclick="iniciar()">Iniciar</button><br />
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a> <br />
-			Voltar para o
-			<a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-2.js"></script>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				<h3>Diga seu nome!</h3>
+				<p>
+					A proposta do exercício é receber os dados capturados pelos prompts e
+					exibi-los na sequência!
+				</p>
+			</div>
+			<button onclick="iniciar()">Iniciar</button><br />
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a> <br />
+				Voltar para o
+				<a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-2.js"></script>
+	<script src="/main.js"></script>
 </html>
