--- a/exercicios-javascript/javascript-aula2/exercicio-4.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-4.html
@@ -6,22 +6,24 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercício 4</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			O objetivo deste exercício é printar na tela um <br />texto escrito dentro da caixa
-			de texto abaixo<br />
-			ao pressionar o botão
-		</div>
-		<div id="exercicio">
-			<input type="text" />
-			<button>botao</button><br />
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o
-			<a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-4.js"></script>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				O objetivo deste exercício é printar na tela um <br />texto escrito dentro da
+				caixa de texto abaixo<br />
+				ao pressionar o botão
+			</div>
+			<div id="exercicio">
+				<input type="text" />
+				<button>botao</button><br />
+			</div>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o
+				<a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-4.js"></script>
+	<script src="/main.js"></script>
 </html>
