--- a/exercicios-javascript/javascript-aula2/exercicio-8.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-8.html
@@ -10,50 +10,54 @@
 		<link rel="stylesheet" href="./css/exercicio-8.css" />
 		<title>Exercicio 8</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			O objetivo desse Exercício é:
-			<ul>
-				<li>Ter um botão onde, quando clicado</li>
-				<li>Abre um modal contendo um Formulário</li>
-				<li>Clique no botão abaixo e veja seu funcionamento!</li>
-			</ul>
-		</div>
-		<div id="exercicio">
-			<button id="botaoEbook">Quero Receber o E-Book Grátis</button><br />
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				O objetivo desse Exercício é:
+				<ul>
+					<li>Ter um botão onde, quando clicado</li>
+					<li>Abre um modal contendo um Formulário</li>
+					<li>Clique no botão abaixo e veja seu funcionamento!</li>
+				</ul>
+			</div>
+			<div id="exercicio">
+				<button id="botaoEbook">Quero Receber o E-Book Grátis</button><br />
 
-			<div id="containerModal">
-				<div id="modalEbook">
-					<div>
-						<span id="botaoFecha" class="material-symbols-outlined">close</span>
-					</div>
-					<h1>Preencha seus dados para receber o E-Book Gratuito!</h1>
-					<div id="formulario">
+				<div id="containerModal">
+					<div id="modalEbook">
 						<div>
-							Nome:<br />
-							<input type="text" />
+							<span id="botaoFecha" class="material-symbols-outlined"
+								>close</span
+							>
 						</div>
-						<div>
-							Seu Melhor email:<br />
-							<input type="email" />
-						</div>
-						<div id="buttonContainer">
-							<button id="enviar">Enviar!</button>
-							<div id="modalSucesso">
-								<h3>Sucesso!</h3>
-								<p>Formulario enviado com sucesso!</p>
+						<h1>Preencha seus dados para receber o E-Book Gratuito!</h1>
+						<div id="formulario">
+							<div>
+								Nome:<br />
+								<input type="text" />
+							</div>
+							<div>
+								Seu Melhor email:<br />
+								<input type="email" />
+							</div>
+							<div id="buttonContainer">
+								<button id="enviar">Enviar!</button>
+								<div id="modalSucesso">
+									<h3>Sucesso!</h3>
+									<p>Formulario enviado com sucesso!</p>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o
-			<a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-8.js"></script>
-		<script src="/main.js"></script>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o
+				<a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-8.js"></script>
+	<script src="/main.js"></script>
 </html>
