--- a/exercicios-javascript/javascript-aula3/exercicio-10.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-10.html
@@ -7,22 +7,24 @@
 		<link rel="stylesheet" href="./css/exercicio-10.css" />
 		<title>Exercício 10</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			O objetivo desse exercício é validar um número<br />
-			de telefone que segue este formato: <br />
-			(XX) XXXX-XXXX ou (XX) - XXXXX-XXXX
-		</div>
-		<div id="exercicio">
-			<input id="telefone" type="text" />
-			<button id="verificar">verificar</button>
-			<p id="mensagem"></p>
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-10.js"></script>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				O objetivo desse exercício é validar um número<br />
+				de telefone que segue este formato: <br />
+				(XX) XXXX-XXXX ou (XX) - XXXXX-XXXX
+			</div>
+			<div id="exercicio">
+				<input id="telefone" type="text" />
+				<button id="verificar">verificar</button>
+				<p id="mensagem"></p>
+			</div>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-10.js"></script>
+	<script src="/main.js"></script>
 </html>
