--- a/exercicios-javascript/javascript-aula3/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-3.html
@@ -7,30 +7,32 @@
 		<link rel="stylesheet" href="./css/exercicio-3.css" />
 		<title>Exercício 3</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			O objetivo dessa página é, ter um texto clicável onde:
-			<ul>
-				<li>A cada clique um contador é acionado</li>
-				<li>Ao clicar, ele muda para “Clicou 1 vez”</li>
-				<li>Ao clicar de novo, ele muda para “Clicou 2 vezes”</li>
-				<li>
-					Clicando mais vezes
-					<ul>
-						<li>ele vai aumentando a contagem</li>
-						<li>até o 10º clique: “Clicou 10 vezes”</li>
-						<li> Ao clicar pela 11ª vez, ele muda para “Já chega não?” </li>
-						<li> E continua com esse texto mesmo clicando mais vezes </li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-		<p id="paragrafo">Clique em Mim</p>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-3.js"></script>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				O objetivo dessa página é, ter um texto clicável onde:
+				<ul>
+					<li>A cada clique um contador é acionado</li>
+					<li>Ao clicar, ele muda para “Clicou 1 vez”</li>
+					<li>Ao clicar de novo, ele muda para “Clicou 2 vezes”</li>
+					<li>
+						Clicando mais vezes
+						<ul>
+							<li>ele vai aumentando a contagem</li>
+							<li>até o 10º clique: “Clicou 10 vezes”</li>
+							<li> Ao clicar pela 11ª vez, ele muda para “Já chega não?” </li>
+							<li> E continua com esse texto mesmo clicando mais vezes </li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+			<p id="paragrafo">Clique em Mim</p>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-3.js"></script>
+	<script src="/main.js"></script>
 </html>
