--- a/exercicios-javascript/javascript-aula3/exercicio-9.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-9.html
@@ -7,31 +7,33 @@
 		<link rel="stylesheet" href="./css/exercicio-9.css" />
 		<title>Exercício 9</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			O Objetivo desse exercício é criar um aleatorizador de números,<br />
-			onde deve ser inserido um valor mínimo e outro máximo,<br />
-			o número sorteado aparecerá logo abaixo.<br /><br />
-		</div>
-		<div id="exercicio">
-			<div>
-				Valor mínimo:
-				<input type="text" id="min" />
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				O Objetivo desse exercício é criar um aleatorizador de números,<br />
+				onde deve ser inserido um valor mínimo e outro máximo,<br />
+				o número sorteado aparecerá logo abaixo.<br /><br />
 			</div>
+			<div id="exercicio">
+				<div>
+					Valor mínimo:
+					<input type="text" id="min" />
+				</div>
 
-			<div>
-				Valor máximo:
-				<input type="text" id="max" />
+				<div>
+					Valor máximo:
+					<input type="text" id="max" />
+				</div>
+
+				<button id="sorteia">Sortear</button>
+				<p id="resultado">Número sorteado:</p>
 			</div>
-
-			<button id="sorteia">Sortear</button>
-			<p id="resultado">Número sorteado:</p>
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-9.js"></script>
-		<script src="/main.js"></script>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-9.js"></script>
+	<script src="/main.js"></script>
 </html>
