--- a/exercicios-javascript/javascript-aula3/index.html
+++ b/exercicios-javascript/javascript-aula3/index.html
@@ -6,21 +6,23 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercícios Aula 3 JavaScript</title>
 	</head>
-	<body id="content">
-		Segue abaixo a lista de Exercicios práticos da Aula 3 de JavaScript:
-		<nav>
-			<ul>
-				<li><a href="./exercicio-3.html" class="link">Exercício 3</a></li>
-				<li><a href="./exercicio-4.html" class="link">Exercício 4</a></li>
-				<li><a href="./exercicio-8.html" class="link">Exercício 8</a></li>
-				<li><a href="./exercicio-9.html" class="link">Exercício 9</a></li>
-				<li><a href="./exercicio-10.html" class="link">Exercício 10</a></li>
-			</ul>
-		</nav>
-		<nav id="linkNav">
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
-			Ir para minha <a href="/index.html" class="link">Home</a>
-		</nav>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			Segue abaixo a lista de Exercicios práticos da Aula 3 de JavaScript:
+			<nav>
+				<ul>
+					<li><a href="./exercicio-3.html" class="link">Exercício 3</a></li>
+					<li><a href="./exercicio-4.html" class="link">Exercício 4</a></li>
+					<li><a href="./exercicio-8.html" class="link">Exercício 8</a></li>
+					<li><a href="./exercicio-9.html" class="link">Exercício 9</a></li>
+					<li><a href="./exercicio-10.html" class="link">Exercício 10</a></li>
+				</ul>
+			</nav>
+			<nav id="linkNav">
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
+				Ir para minha <a href="/index.html" class="link">Home</a>
+			</nav>
+		</main>
 	</body>
+	<script src="/main.js"></script>
 </html>
