--- a/exercicios-javascript/javascript-aula4/exercicio-5.html
+++ b/exercicios-javascript/javascript-aula4/exercicio-5.html
@@ -6,44 +6,46 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercício 5</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			<p>
-				O objetivo desse exercício é mostrar as diferenças em código dos comandos
-				condicionais
-			</p>
-		</div>
-		<div id="exercicio">
-			Variante do If com Ternario
-			<div>
-				Digite um número:
-				<input id="numero" type="text" />
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				<p>
+					O objetivo desse exercício é mostrar as diferenças em código dos comandos
+					condicionais
+				</p>
 			</div>
-			<button id="btnConverte">converter</button>
-			<p id="numeroPorExtenso"></p>
-			<br />
-			Variante com Switch
-			<div>
-				Digite um número:
-				<input id="numero2" type="text" />
+			<div id="exercicio">
+				Variante do If com Ternario
+				<div>
+					Digite um número:
+					<input id="numero" type="text" />
+				</div>
+				<button id="btnConverte">converter</button>
+				<p id="numeroPorExtenso"></p>
+				<br />
+				Variante com Switch
+				<div>
+					Digite um número:
+					<input id="numero2" type="text" />
+				</div>
+				<button id="btnConverte2">converter</button>
+				<p id="numeroPorExtenso2"></p>
+				<br />
+				Variante sem Switch com Objeto
+				<div>
+					Digite um número:
+					<input id="numero3" type="text" />
+				</div>
+				<button id="btnConverte3">converter</button>
+				<p id="numeroPorExtenso3"></p>
+				<br />
 			</div>
-			<button id="btnConverte2">converter</button>
-			<p id="numeroPorExtenso2"></p>
-			<br />
-			Variante sem Switch com Objeto
-			<div>
-				Digite um número:
-				<input id="numero3" type="text" />
-			</div>
-			<button id="btnConverte3">converter</button>
-			<p id="numeroPorExtenso3"></p>
-			<br />
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-5.js"></script>
-		<script src="/main.js"></script>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-5.js"></script>
+	<script src="/main.js"></script>
 </html>
