--- a/exercicios-javascript/javascript-aula4/index.html
+++ b/exercicios-javascript/javascript-aula4/index.html
@@ -6,21 +6,31 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercícios Aula 4 JavaScript</title>
 	</head>
-	<body id="content">
-		Segue abaixo a lista de Exercicios práticos da Aula 4 de JavaScript:
-		<nav>
-			<ul>
-				<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
-				<li><a href="./exercicio-6.html" class="link">Exercício 6</a></li>
-				<li><a href="./exercicio-9-obj.html" class="link">Exercício 9 Objetos</a></li>
-				<li><a href="./exercicio-9-swt.html" class="link">Exercício 9 Switch</a></li>
-				<li><a href="./exercicio-10.html" class="link">Exercício 10</a></li>
-			</ul>
-		</nav>
-		<nav id="linkNav">
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
-			Ir para minha <a href="/index.html" class="link">Home</a>
-		</nav>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			Segue abaixo a lista de Exercicios práticos da Aula 4 de JavaScript:
+			<nav>
+				<ul>
+					<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
+					<li><a href="./exercicio-6.html" class="link">Exercício 6</a></li>
+					<li
+						><a href="./exercicio-9-obj.html" class="link"
+							>Exercício 9 Objetos</a
+						></li
+					>
+					<li
+						><a href="./exercicio-9-swt.html" class="link"
+							>Exercício 9 Switch</a
+						></li
+					>
+					<li><a href="./exercicio-10.html" class="link">Exercício 10</a></li>
+				</ul>
+			</nav>
+			<nav id="linkNav">
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
+				Ir para minha <a href="/index.html" class="link">Home</a>
+			</nav>
+		</main>
 	</body>
+	<script src="/main.js"></script>
 </html>
