--- a/exercicios-javascript/javascript-aula5/exercicio-6.html
+++ b/exercicios-javascript/javascript-aula5/exercicio-6.html
@@ -6,24 +6,27 @@
 		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
 		<title>Exercício 6</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			Fa&ccedil;a um &lt;input type=&quot;text&quot;&gt; para preenchimento do nome
-			completo da pessoa. Esse input s&oacute; deve aceitar letras (min&uacute;sculas ou
-			mai&uacute;sculas, somente sem acentos) e espa&ccedil;os em branco. Se o
-			usu&aacute;rio digitar um caractere que n&atilde;o &eacute; permitido, o caractere
-			simplesmente n&atilde;o aparece no input como se n&atilde;o tivesse sido digitado.
-			Sugest&atilde;o: pesquise sobre event.key Sugest&atilde;o 2: saiba que o evento
-			&ldquo;input&rdquo; &eacute; disparado depois que o input mudou de valor.
-		</div>
-		<div id="exercicio">
-			<input id="nomeCompleto" type="text" oninput="validarInput(event)" />
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-6.js"></script>
-		<script src="/main.js"></script>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				Fa&ccedil;a um &lt;input type=&quot;text&quot;&gt; para preenchimento do nome
+				completo da pessoa. Esse input s&oacute; deve aceitar letras (min&uacute;sculas
+				ou mai&uacute;sculas, somente sem acentos) e espa&ccedil;os em branco. Se o
+				usu&aacute;rio digitar um caractere que n&atilde;o &eacute; permitido, o
+				caractere simplesmente n&atilde;o aparece no input como se n&atilde;o tivesse
+				sido digitado. Sugest&atilde;o: pesquise sobre event.key Sugest&atilde;o 2:
+				saiba que o evento &ldquo;input&rdquo; &eacute; disparado depois que o input
+				mudou de valor.
+			</div>
+			<div id="exercicio">
+				<input id="nomeCompleto" type="text" oninput="validarInput(event)" />
+			</div>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-6.js"></script>
+	<script src="/main.js"></script>
 </html>
