--- a/exercicios-javascript/javascript-aula5/exercicio-7.html
+++ b/exercicios-javascript/javascript-aula5/exercicio-7.html
@@ -7,32 +7,34 @@
 		<link rel="stylesheet" href="./css/exercicio-7.css" />
 		<title>Exercício 7</title>
 	</head>
-	<body id="content">
-		<div id="explicacao">
-			Desafio ! Lógica difícil ! Trabalhoso ! Faça uma página que tem uma div com borda
-			preta e dentro dela uma div pequena colorida: Quando a div pequena é clicada, ela
-			troca de cor, digamos que ela ficou “ativa”. Enquanto ela está ativa, caso você
-			aperte uma seta direcional do teclado (esquerda, baixo, direta, cima), a div
-			pequena se move na direção que você apertou (pode ser um passo de ~10px, não
-			importa exatamente). Se você estiver segurando Shift quando apertar numa seta, o
-			passo deve ser maior que o normal (~100px). Mas caso um passo da div pequena a
-			faria sair (total ou parcialmente) da borda da div externa, o passo não é dado em
-			todo seu deslocamento, mas somente até a borda. Quando você clica fora da div
-			pequena, ela deixa de estar “ativa” e volta à cor original. Enquanto ela não está
-			ativa, apertar as setas do teclado não causa movimentação. Sugestão: para saber a
-			posição e tamanho de um elemento, pesquise sobre as propriedades offsetLeft,
-			offsetTop, clientWidth, clientHeight.
-		</div>
-		<div id="exercicio">
-			<div id="conteiner">
-				<div class="naoSelecionada caixinha"></div>
+	<body>
+		<main id="content">
+			<div id="explicacao">
+				Desafio ! Lógica difícil ! Trabalhoso ! Faça uma página que tem uma div com
+				borda preta e dentro dela uma div pequena colorida: Quando a div pequena é
+				clicada, ela troca de cor, digamos que ela ficou “ativa”. Enquanto ela está
+				ativa, caso você aperte uma seta direcional do teclado (esquerda, baixo,
+				direta, cima), a div pequena se move na direção que você apertou (pode ser um
+				passo de ~10px, não importa exatamente). Se você estiver segurando Shift quando
+				apertar numa seta, o passo deve ser maior que o normal (~100px). Mas caso um
+				passo da div pequena a faria sair (total ou parcialmente) da borda da div
+				externa, o passo não é dado em todo seu deslocamento, mas somente até a borda.
+				Quando você clica fora da div pequena, ela deixa de estar “ativa” e volta à cor
+				original. Enquanto ela não está ativa, apertar as setas do teclado não causa
+				movimentação. Sugestão: para saber a posição e tamanho de um elemento, pesquise
+				sobre as propriedades offsetLeft, offsetTop, clientWidth, clientHeight.
 			</div>
-		</div>
-		<nav id="linkNav">
-			Voltar para a <a href="./index.html" class="link">Lista</a><br />
-			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
-		</nav>
-		<script src="./js/exercicio-7.js"></script>
-		<script src="/main.js"></script>
+			<div id="exercicio">
+				<div id="conteiner">
+					<div class="naoSelecionada caixinha"></div>
+				</div>
+			</div>
+			<nav id="linkNav">
+				Voltar para a <a href="./index.html" class="link">Lista</a><br />
+				Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
+			</nav>
+		</main>
 	</body>
+	<script src="./js/exercicio-7.js"></script>
+	<script src="/main.js"></script>
 </html>
