Aula 6 adicionado - Melhorias e ajustes

--- a/index.html
+++ b/index.html
@@ -14,21 +14,31 @@
 
 			Entre e fique à vontade!<br />
 			Segue a lista de alguns deles:
-
 			<ul>
-				<li>
-					<a href="projetolandingpage/index.html" class="link"
-						>Meu primeiro Projeto de Landing Page</a
-					>
-				</li>
-				<li>
-					<a href="/exercicios-javascript/" class="link"
-						>Exercicios das Aulas de JavaScript</a
-					>
+				<li
+					>Projeto Alpha Ed/Tech
+					<ul>
+						<li>
+							<a href="projetolandingpage/index.html" class="link"
+								>Meu primeiro Projeto de Landing Page</a
+							>
+						</li>
+						<li>
+							<a href="/exercicios-javascript/" class="link"
+								>Exercícios das Aulas de JavaScript</a
+							>
+						</li>
+					</ul>
 				</li>
 			</ul>
 
-			Conforme sigo estudando, continuarei atualizando essa página!
+			<p>
+				Essas páginas em questão foram todas feitas usando<br />
+				HTML e CSS simples, juntamente com JavaScript puro!<br />
+				Elas usam uma técnica de navegação similar ao AJAX,<br />
+				Mas sem uso de nenhum framework ou backend!<br />
+			</p>
+			<p> Conforme sigo estudando, continuarei atualizando esse projeto! </p>
 		</main>
 		<script src="/main.js"></script>
 	</body>
