--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -8,82 +8,66 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-		/>
-		<link rel="icon" href="img/futurohojefav.png" type="image/x-icon" />
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+		<link rel="icon" href="./img/futurohojefav.png" type="image/x-icon" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap"
-			rel="stylesheet"
-		/>
+			rel="stylesheet" />
 
 		<!-- HTML Meta Tags -->
 		<title>Futuro Hoje</title>
 		<meta name="description" content="Rede de investimentos financeiros" />
 
 		<!-- Facebook Meta Tags -->
-		<meta
-			property="og:url"
-			content="https://gaidenblk.github.io/projetolandingpage/"
-		/>
+		<meta property="og:url" content="https://gaidenblk.github.io/projetolandingpage/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Futuro Hoje" />
-		<meta
-			property="og:description"
-			content="Rede de investimentos financeiros"
-		/>
+		<meta property="og:description" content="Rede de investimentos financeiros" />
 		<meta
 			property="og:image"
-			content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png"
-		/>
+			content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png" />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta property="twitter:domain" content="gaidenblk.github.io" />
 		<meta
 			property="twitter:url"
-			content="https://gaidenblk.github.io/projetolandingpage/"
-		/>
+			content="https://gaidenblk.github.io/projetolandingpage/" />
 		<meta name="twitter:title" content="Futuro Hoje" />
-		<meta
-			name="twitter:description"
-			content="Rede de investimentos financeiros"
-		/>
+		<meta name="twitter:description" content="Rede de investimentos financeiros" />
 		<meta
 			name="twitter:image"
-			content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png"
-		/>
+			content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png" />
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 	</head>
 
-	<body id="content">
-		<header>
-			<a
-				id="voltarParaHome"
-				class="material-symbols-outlined link"
-				href="/index.html"
-				>house</a
-			>
-			<button
-				id="buttonMode"
-				class="material-symbols-outlined"
-				onclick="toggleDarkMode()"
-			>
-				dark_mode
-			</button>
-			<div id="topo">
-				<div>
-					<canvas id="meuCanvas" width="130" height="125"></canvas>
-					<img
-						id="futuroicone"
-						src="img/futurohoje.png"
-						alt="Futuro Hoje Logo"
-					/>
+	<body>
+		<main id="content">
+			<header>
+				<a
+					id="voltarParaHome"
+					class="material-symbols-outlined link"
+					href="/index.html"
+					>house</a
+				>
+				<button
+					id="buttonMode"
+					class="material-symbols-outlined"
+					onclick="toggleDarkMode()">
+					dark_mode
+				</button>
+				<div id="topo">
+					<div>
+						<canvas id="meuCanvas" width="130" height="125"></canvas>
+						<img
+							id="futuroicone"
+							src="img/futurohoje.png"
+							alt="Futuro Hoje Logo" />
+					</div>
+					<h1>FUTURO <br />HOJE</h1>
 				</div>
-				<h1>FUTURO <br />HOJE</h1>
-			</div>
-		</header>
-		<main>
+			</header>
 			<section>
 				Procurando mudar a maneira<br />
 				de investir seu dinheiro?<br />
@@ -130,50 +114,46 @@
 				</div>
 				<div id="botao" class="linha">
 					<p>
-						Ao Clicar em "Criar Conta" <br />você concorda com
-						nossos<br /><a href="html/termos.html"
+						Ao Clicar em "Criar Conta" <br />você concorda com nossos<br /><a
+							href="html/termos.html"
 							>termos de serviços</a
 						>
-						e <br /><a href="html/privacidade.html"
-							>política de privacidade</a
-						>
+						e <br /><a href="html/privacidade.html">política de privacidade</a>
 					</p>
 					<input type="submit" value="Criar conta" />
 				</div>
 			</form>
 			<article>
 				<p>
-					A Futuro Hoje tem transformado <br />a vida de muitos de
-					seus investidores<br />
+					A Futuro Hoje tem transformado <br />a vida de muitos de seus
+					investidores<br />
 					simplesmente mudando a<br />
 					forma de investir seu capital!
 				</p>
 				<div id="depoimentos">
 					<p>
-						"Eu não fazia ideia de quanto dinheiro estava deixando
-						de ganhar por dia!"<br />
+						"Eu não fazia ideia de quanto dinheiro estava deixando de ganhar por
+						dia!"<br />
 						<i>-Wallace G.</i>
 					</p>
 					<p>
-						"Precisava de uma maneira nova de investir meu dinheiro,
-						e encontrei a que mais se adequa às minhas
-						necessidades!"<br /><i>-Diana P.</i>
+						"Precisava de uma maneira nova de investir meu dinheiro, e encontrei a
+						que mais se adequa às minhas necessidades!"<br /><i>-Diana P.</i>
 					</p>
 					<p>
-						"Diversificar minha carteira de investimentos é a
-						maneira mais inteligente de acumular capital!"<br />
+						"Diversificar minha carteira de investimentos é a maneira mais
+						inteligente de acumular capital!"<br />
 						<i>-Roger S.</i>
 					</p>
 				</div>
 			</article>
+			<footer>
+				<div id="login"> Já possui uma conta? <a href="">Faça Login</a><br /> </div>
+				Criado e desenvolvido por @gaidenblk softworks - 2024 - Todos os direitos
+				reservados
+			</footer>
 		</main>
-		<footer>
-			<div id="login">
-				Já possui uma conta? <a href="">Faça Login</a><br />
-			</div>
-			Criado e desenvolvido por @gaidenblk softworks - 2024 - Todos os
-			direitos reservados
-		</footer>
 	</body>
-	<script src="./main.js"></script>
+	<script src="./script.js"></script>
+	<script src="/main.js"></script>
 </html>
