--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -40,6 +40,11 @@
 						>Aula 06 - DOM avançado, closure e dataset</a
 					>
 				</li>
+				<li>
+					<a href="javascript-aula7/index.html" class="link"
+						>Aula 07 - Local Storage, JSON e try-catch</a
+					>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
