--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -45,6 +45,11 @@
 						>Aula 07 - Local Storage, JSON e try-catch</a
 					>
 				</li>
+				<li>
+					<a href="javascript-aula8/index.html" class="link"
+						>Aula 08 - Introdução a arrays, comando for-of e querySelectorAll</a
+					>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
