--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -55,6 +55,11 @@
 						>Aula 09 - Outros comandos e táticas com loop</a
 					>
 				</li>
+				<li>
+					<a href="javascript-aula10/index.html" class="link"
+						>Aula 10 - Métodos funcionais de array</a
+					>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
