--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -60,6 +60,11 @@
 						>Aula 10 - Métodos funcionais de array</a
 					>
 				</li>
+				<li>
+					<a href="javascript-aula11/index.html" class="link"
+						>Aula 11 - Subprogramação</a
+					>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
