--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -65,6 +65,11 @@
 						>Aula 11 - Subprogramação</a
 					>
 				</li>
+				<li>
+					<a href="javascript-aula12/index.html" class="link"
+						>Aula 12 - Usando Módulos</a
+					>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
