--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -63,6 +63,10 @@
 					<a href="javascript-aula13/index.html" class="link">
 						Aula 13 - Controle de tempo e áudio</a>
 				</li>
+				<li>
+					<a href="javascript-aula14/index.html" class="link">
+						Aula 14 - Single Page Application</a>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
