--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -67,6 +67,10 @@
 					<a href="javascript-aula14/index.html" class="link">
 						Aula 14 - Single Page Application</a>
 				</li>
+				<li>
+					<a href="javascript-aula15/index.html" class="link">
+						Aula 15 - Requisições Web</a>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
