--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -75,6 +75,10 @@
 					<a href="javascript-aula16/index.html" class="link">
 						Aula 16 - Promise e async-await</a>
 				</li>
+				<li>
+					<a href="javascript-aula17/index.html" class="link">
+						Aula 17 - Class</a>
+				</li>
 			</ul>
 
 			Voltar para a <a href="/index.html" class="link">Home</a><br />
